--- a/public/index.html
+++ b/public/index.html
@@ -36,86 +36,6 @@
         <source src="media/video/fog.mp4" type="video/mp4">
       </video>
       <div class="column-content" id="card-listing">
-        <div class="card-container">
-          <article class="𝔘𝔫𝔥𝔬𝔩𝔡">
-            <figure class="𝔎𝔬𝔫𝔱𝔢𝔯𝔣𝔢𝔦">
-              <img src="media/MM35_PG133.jpg">
-              <figcaption class="badge">Teufelsbraten</figcaption>
-            </figure>
-
-            <figure class="𝔈𝔦𝔤𝔢𝔫𝔱ü𝔪𝔩𝔦𝔠𝔥𝔨𝔢𝔦𝔱𝔢𝔫">
-              <table>
-                <colgroup>
-                  <col width="25%">
-                  <col width="25%">
-                  <col width="25%">
-                  <col width="25%">
-                </colgroup>
-                <tbody>
-                  <tr>
-                    <td>AC</td>
-                    <td class="value">15</td>
-                    <td>HP</td>
-                    <td class="value">5</td>
-                  </tr>
-                  <tr>
-                    <td>Attack</td>
-                    <td colspan="3" class="value">club +2/d6</td>
-                  </tr>
-                  <tr>
-                    <td>Saves</td>
-                    <td colspan="3" class="value"><span class="value-part">3</span> <span class="value-part">1</span>
-                      <span class="value-part">-1</span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>Stats</td>
-                    <td colspan="3" class="value"><span class="value-part">11</span> <span class="value-part">13</span>
-                      <span class="value-part">12</span> <span class="value-part">10</span> <span
-                        class="value-part">9</span> <span class="value-part">6</span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>Init</td>
-                    <td class="value">1</td>
-                    <td>Speed</td>
-                    <td class="value">30
-                      feet</td>
-                  </tr>
-                  <tr>
-                    <td colspan="4" class="long-text">
-                      <ul style="list-style: none;padding:0; margin:0;">
-                        <li>Hide: +5</li>
-                        <li>Listen: +2</li>
-                        <li>Move Silently: +5</li>
-                        <li>Ride: +4</li>
-                        <li>Spot: +2</li>
-                      </ul>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-              <div class="badge cr">⅓</div>
-              <figcaption class="badge">Teufelsbraten</figcaption>
-            </figure>
-
-
-            <div class="toolbar"><button type="button">Eradicate
-                <svg>
-                  <use href="media/icons.svg#icon-axe"></use>
-                </svg>
-              </button>
-              <button type="button">Mutate
-                <svg>
-                  <use href="media/icons.svg#icon-quill"></use>
-                </svg>
-              </button>
-            </div>
-
-          </article>
-        </div>
-
-
       </div>
     </section>
     <section class="column" class="column" id="style-editor">
@@ -129,6 +49,7 @@
           </div>
           <div class="form-row" id="card-bg-color-selector">
             <h3>Color</h3>
+            <color-selector type="backgrounds" name="--c-bg-color"></color-selector>
           </div>
           <div class="form-row">
             <h3>Pattern</h3>
@@ -141,14 +62,16 @@
             <h3>Font</h3>
             <font-selector name="--c-badge-font"></font-selector>
           </div>
-          <div class="form-row" id="badge-color-selector">
+          <div class="form-row">
             <h3>Color</h3>
+            <color-selector type="badge" name="--c-badge-color"></color-selector>
           </div>
         </details>
         <details>
           <summary>Frame</summary>
-          <div class="form-row" id="card-border-color-selector">
+          <div class="form-row">
             <h3>Color</h3>
+            <color-selector type="borders" name="--c-border-color"></color-selector>
           </div>
           <div class="form-row">
             <label>Pattern</label>
