--- a/public/index.html
+++ b/public/index.html
@@ -22,19 +22,18 @@
   <main>
     <section class="column" id="library">
       <div class="column-heading-container">
-        <h2 class="column-heading">Beasts
-        </h2>
-        <character-sorter></character-sorter>
+        <h2 class="column-heading">Creatures</h2>
+        <library-organizer></library-organizer>
       </div>
       <character-library sortby="name" groupby="name" sortdir="asc" groupdir="asc"></character-library>
     </section>
     <section class="column" id="editor">
-      <h2 class="column-heading">Gathering</h2>
+      <h2 class="column-heading">Thy Creatures</h2>
 
-      <video id="smoke">
+      <!--video id="smoke">
         <source src="media/video/fog.webm" type="video/webm">
         <source src="media/video/fog.mp4" type="video/mp4">
-      </video>
+      </video-->
       <div class="column-content" id="card-listing">
       </div>
     </section>
