changing values through form

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <main>
     <section class="column" id="library">
       <div class="column-heading-container">
-        <h2 class="column-heading">Creatures</h2>
+        <h2 class="column-heading">All Creatures</h2>
         <library-organizer></library-organizer>
       </div>
       <character-library sortby="name" groupby="name" sortdir="asc" groupdir="asc"></character-library>
