card edit rudimentary

--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,18 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ghastly Beasts Card Maker</title>
+  <title>Ghastly Creatures Card Maker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/main.css">
-  <link rel="icon" href="media/favicon.svg">
+  <link rel="icon" href="media/favicon-gc.svg">
 </head>
 
 <body>
   <header>
     <h1 id="logo-area">
       <svg>
-        <title>Ghastly Beasts Card Maker</title>
-        <use href="media/logo.svg#logo"></use>
+        <title>Ghastly Creatures Card Maker</title>
+        <use href="media/ghastly-creatures.svg#logo"></use>
       </svg>
     </h1>
   </header>
@@ -81,7 +81,7 @@
     </section>
   </main>
   <footer>
-    <span>Ghastly Beasts Card Maker</span>
+    <span>Ghastly Creatures Card Maker</span>
     <span>© 2022 Joel Bout</span>
   </footer>
   <script src="js/main.js"></script>
