form feature complete

--- a/public/index.html
+++ b/public/index.html
@@ -38,13 +38,17 @@
       </div>
     </section>
     <section class="column" class="column" id="style-editor">
-      <h2 class="column-heading">Mutations</h2>
+      <h2 class="column-heading">Style</h2>
       <form class="column-content">
         <details open>
           <summary>Card</summary>
           <div class="form-row">
             <h3>Font</h3>
             <font-selector name="--c-card-font"></font-selector>
+          </div>
+          <div class="form-row">
+            <h3>Font Size</h3>
+            <font-size name="--c-card-font-size"></font-size>
           </div>
           <div class="form-row" id="card-bg-color-selector">
             <h3>Color</h3>
@@ -60,6 +64,10 @@
           <div class="form-row">
             <h3>Font</h3>
             <font-selector name="--c-badge-font"></font-selector>
+          </div>
+          <div class="form-row">
+            <h3>Font Size</h3>
+            <font-size name="--c-badge-font-size"></font-size>
           </div>
           <div class="form-row">
             <h3>Color</h3>
