tab handling + soft delete

--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,7 @@
     <span>Ghastly Creatures Card Maker</span>
     <span>© 2022 Joel Bout</span>
   </footer>
+  <div id="toast"></div>
   <script src="js/main.js"></script>
 </body>
 
