tabs finished (todo qa)

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     </h1>
   </header>
 
-  <main>
+  <main is="app-container">
     <section class="column" id="library">
       <div class="column-heading-container">
         <h2 class="column-heading">Library</h2>
