--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         <tab-content></tab-content>
       </div>
     </section>
-    <section class="column" class="column" id="style-editor">
+    <style-editor class="column">
       <h2 class="column-heading">Style</h2>
       <form class="column-content">
         <details open>
@@ -93,7 +93,6 @@
     <span>Ghastly Creatures Card Maker</span>
     <span>© 2022 Joel Bout</span>
   </footer>
-  <div id="toast"></div>
   <script src="js/main.js"></script>
 </body>
 
