fixed cut/copy/paste, built export, started import

--- a/public/index.html
+++ b/public/index.html
@@ -92,6 +92,7 @@
       </form>
       </section>
   </main>
+  <file-upload></file-upload>
   <footer>
     <span>Ghastly Creatures Card Maker</span>
     <span>© 2022 Joel Bout</span>
