print css, patterns work only partially

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,15 @@
         <use href="media/ghastly-creatures.svg#logo"></use>
       </svg>
     </h1>
-    <import-export>
-      <h3>Import/Export</h3>
-    </import-export>
+    <ul id="main-toolbar">
+      <li>
+        <import-export>
+          <div>Import/Export</div>
+        </import-export>
+      </li>
+      <li><button type="button" onclick="print()">Print</button></li>
+      <li><a href="#license">License</a></li>
+    </ul>
   </header>
 
   <main is="app-container">
@@ -90,7 +96,63 @@
           </div>
         </details>
       </form>
-      </section>
+    </style-editor>
+    <section id="license">
+      <div class="license-text">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet repellendus tempore commodi, explicabo quam sed
+        natus voluptates. Maiores vel fuga facilis veniam quibusdam ad sequi ducimus repellendus nobis, quod nostrum.
+        Repellat laudantium, quos esse dolor ducimus omnis sed dolorum nulla repellendus est ipsam qui consectetur ipsa
+        nostrum provident? Aspernatur dolorem debitis suscipit quos culpa optio modi eos et, repudiandae vero?
+        Molestiae dolor, deserunt, minus adipisci, ipsam ab laborum iste distinctio sint excepturi accusantium maiores
+        natus incidunt labore blanditiis sequi odit perspiciatis nihil nobis quis eaque. Odio ex est corrupti quibusdam!
+        Nemo ex cum amet distinctio dolore eum eos similique voluptatibus tempora reiciendis facere suscipit quasi
+        possimus at sapiente, pariatur aut asperiores in ea rerum natus sint magnam? Porro, voluptas obcaecati!
+        Quibusdam quos commodi, soluta, repudiandae molestias possimus corporis laborum animi cum, illo nobis iure
+        nostrum illum vero! Suscipit voluptatem dignissimos, enim officiis quae voluptates reprehenderit eius aut et
+        perspiciatis dolores.
+        Animi cum voluptatem pariatur sit officia voluptas consequatur, cumque maiores aspernatur voluptates soluta
+        veniam reiciendis corporis, quae ratione impedit nihil. Itaque ea sed quod laboriosam quis! Soluta, totam.
+        Voluptate, et.
+        Consectetur iste facere provident corporis, ducimus libero optio labore aliquam a nisi tenetur et aspernatur
+        debitis possimus cupiditate, omnis quam animi? Delectus, similique nobis cupiditate facilis sint tempora
+        quisquam natus!
+        Excepturi qui numquam id recusandae, sunt nisi laborum, fugit magnam reprehenderit expedita eaque. Iure
+        delectus, iusto amet sapiente quisquam sed consectetur ipsam maiores minima! Veniam quae optio rerum numquam
+        maxime.
+        Totam eos praesentium velit illum impedit quaerat repudiandae quasi similique, inventore cum ullam mollitia quam
+        corrupti dolor harum iusto unde quidem saepe rem animi voluptate cupiditate adipisci non? Necessitatibus,
+        voluptatibus.
+        Facere assumenda doloribus labore atque vel maiores officiis pariatur tempore et! Modi iusto a quos sed. Ipsam
+        accusamus, cumque earum, nostrum sed voluptas soluta deserunt autem vero repellat, sequi tenetur.
+        Ipsam quisquam facilis ipsum, illo similique, sed fugiat libero rem eius placeat possimus dolores eligendi
+        distinctio nulla recusandae aperiam voluptas laudantium dolorem tenetur. Repellendus repudiandae architecto
+        possimus libero tempore voluptate.
+        Dolorum molestias sapiente iure. Nesciunt corrupti distinctio dicta eveniet, incidunt beatae molestiae excepturi
+        iure voluptatem quas eius eaque! Minus ipsam voluptatem iste dicta. Delectus, error natus perferendis cupiditate
+        vitae nisi.
+        Pariatur deleniti nesciunt dicta, ad minus ipsum accusantium minima eum blanditiis! Aut ab, animi ipsa commodi
+        officia impedit, nostrum, sit magnam sed assumenda eveniet rerum? Sit totam repudiandae magnam unde.
+        Nam placeat ab saepe rerum quibusdam unde, veniam in perspiciatis aut cum pariatur? Quo quaerat enim iste qui a.
+        Odit ad architecto unde esse porro, repellendus sed consequuntur at explicabo.
+        Atque praesentium dolores vitae sapiente nemo reprehenderit eveniet est ab hic cumque blanditiis quidem, in,
+        labore ipsa sit perspiciatis eaque temporibus omnis itaque nostrum ea. Sapiente deleniti vitae eum dolores.
+        Deleniti omnis ipsa asperiores aperiam! Possimus accusantium quo blanditiis necessitatibus nulla nesciunt, fuga
+        minima illum corporis reiciendis odio? Distinctio obcaecati sapiente atque asperiores harum beatae vel incidunt
+        architecto maiores numquam.
+        Labore voluptatibus modi fuga placeat illo aliquid mollitia, necessitatibus suscipit animi officiis a inventore
+        fugiat. Commodi, accusantium! Saepe, quis excepturi autem, nam aliquam quia quos odit consequatur eum blanditiis
+        facere?
+        Unde, accusantium laborum quo est expedita tenetur voluptatibus eaque nam? Culpa ex, temporibus reprehenderit
+        vitae ratione commodi obcaecati dicta quo consequuntur dolore quam impedit deleniti magni distinctio assumenda,
+        est repellendus.
+        Est sint quaerat, consequatur, laudantium optio fugiat recusandae impedit debitis nihil, incidunt sunt! Minima,
+        dolorem quia? Asperiores libero incidunt quos itaque voluptates. Iure repudiandae, odit fuga maiores autem non
+        eveniet.
+        Ipsa, quae, dicta quidem odio atque quos enim aperiam sequi alias eligendi est! Totam, id. Omnis consectetur
+        quae distinctio iure labore ullam, harum reprehenderit. Similique pariatur provident ipsa aperiam natus!
+        <a href="" class="button">I've read and accepted the terms of the license</a>
+      </div>
+    </section>
   </main>
   <footer>
     <span>Ghastly Creatures Card Maker</span>
